feat: add current version of app